--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,21 +32,23 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+    dynamicFeatures = [':Coffee']
     dataBinding{
         enabled true
     }
 }
 
 dependencies {
-
-    implementation 'androidx.core:core-ktx:1.3.2'
+    implementation project(":Core")
+    implementation 'androidx.core:core-ktx:1.6.0'
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.datastore:datastore-core:1.0.0-alpha08'
+    implementation 'androidx.datastore:datastore-core:1.0.0'
     implementation 'androidx.navigation:navigation-dynamic-features-fragment:2.3.5'
-    testImplementation 'junit:junit:4.+'
+    implementation project(path: ':Core')
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
@@ -57,6 +59,8 @@ dependencies {
 
     def material_version = "1.1.0-alpha07"
     implementation "com.google.android.material:material:$material_version"
+   def  datastoreVersion = "1.0.0-alpha06"
+    implementation "androidx.datastore:datastore-preferences:$datastoreVersion"
 
     
 
