--- a/Coffee/build.gradle
+++ b/Coffee/build.gradle
@@ -1,9 +1,11 @@
 plugins {
     id 'com.android.dynamic-feature'
     id 'kotlin-android'
-    id 'kotlin-kapt'
+
 
     id 'androidx.navigation.safeargs.kotlin'
+    id 'kotlin-kapt'
+    id 'realm-android'
 }
 
 android {
