--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,11 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
-    id 'kotlin-kapt'
     id  'dagger.hilt.android.plugin'
     id 'androidx.navigation.safeargs.kotlin'
+    id 'kotlin-kapt'
+    id 'realm-android'
+
 }
 
 android {
@@ -18,7 +20,9 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
-
+    buildFeatures {
+        viewBinding true
+    }
     buildTypes {
         release {
             minifyEnabled false
@@ -35,6 +39,18 @@ android {
     dynamicFeatures = [':Coffee']
     dataBinding{
         enabled true
+    }
+    buildFeatures {
+        viewBinding true
+    }
+
+
+    sourceSets {
+        main {
+            java {
+                exclude 'io/realm/ValidationList.java'
+            }
+        }
     }
 }
 
@@ -170,5 +186,41 @@ dependencies {
     kapt "com.google.dagger:hilt-android-compiler:2.33-beta"
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha03"
     kapt "androidx.hilt:hilt-compiler:1.0.0-beta01"
+
+    androidTestImplementation('androidx.test.espresso:espresso-core:3.4.0')
+    androidTestImplementation 'org.hamcrest:hamcrest-integration:1.3'
+    implementation 'androidx.biometric:biometric:1.0.0-beta01'
+    // material dialogs
+    def matieral_dialogs_version = "3.1.1"
+    implementation "com.afollestad.material-dialogs:core:$matieral_dialogs_version"
+    implementation "com.afollestad.material-dialogs:input:$matieral_dialogs_version"
+
+    testImplementation 'junit:junit:4.12'
+    testImplementation "org.robolectric:robolectric:3.4.2"
+    testImplementation 'org.hamcrest:hamcrest-library:1.3'
+    testImplementation "org.mockito:mockito-core:2.11.0"
+
+    androidTestImplementation 'org.mockito:mockito-android:2.11.0'
+    androidTestImplementation 'com.android.support:support-annotations:27.0.1'
+    androidTestImplementation 'com.android.support.test.uiautomator:uiautomator-v18:2.1.3'
+    androidTestImplementation 'com.jayway.android.robotium:robotium-solo:5.6.3'
+
+    // AndroidJUnitRunner and JUnit Rules
+    androidTestImplementation 'com.android.support.test:runner:1.0.1'
+    androidTestImplementation 'com.android.support.test:rules:1.0.1'
+
+    // Espresso dependencies
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-contrib:3.0.1'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-intents:3.0.1'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-accessibility:3.0.1'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-web:3.0.1'
+    androidTestImplementation 'com.android.support.test.espresso.idling:idling-concurrent:3.0.1'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-idling-resource:3.0.1'
+
+
+    implementation 'io.realm:android-adapters:2.0.0'
+
+
 
 }
