--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.navigationcomponent">
+    package="com.example.navigationcomponent" >
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -10,7 +10,16 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.NavigationComponent">
+        android:theme="@style/Theme.NavigationComponent" >
+        <activity
+            android:name=".realm.RealmDatabaseActivity"
+            android:exported="true" />
+        <activity
+            android:name=".activity.ShowTextActivity"
+            android:exported="true" />
+        <activity
+            android:name=".activity.PagingActivity"
+            android:exported="true" />
         <activity
             android:name=".activity.NavigationModules"
             android:exported="true" />
@@ -36,9 +45,8 @@
             android:name=".activity.MainActivity"
             android:exported="true" />
         <activity
-            android:name=".activity.PagingActivity"
-            android:exported="true"
-            android:value="@navigation/nav_graph">
+            android:name=".activity.UIAutomatorActivity"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
