--- a/build.gradle
+++ b/build.gradle
@@ -3,12 +3,16 @@ buildscript {
     repositories {
         google()
         mavenCentral()
+
+
     }
     dependencies {
         classpath "com.android.tools.build:gradle:7.0.2"
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.20"
         classpath "com.google.dagger:hilt-android-gradle-plugin:2.28-alpha"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.2"
+
+        classpath "io.realm:realm-gradle-plugin:10.4.0"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
