--- a/Coffee/build.gradle
+++ b/Coffee/build.gradle
@@ -5,7 +5,7 @@ plugins {
 
     id 'androidx.navigation.safeargs.kotlin'
     id 'kotlin-kapt'
-    id 'realm-android'
+//    id 'realm-android'
 }
 
 android {
