--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id  'dagger.hilt.android.plugin'
     id 'androidx.navigation.safeargs.kotlin'
     id 'kotlin-kapt'
-    id 'realm-android'
+    //id 'realm-android'
 
 }
 
@@ -65,6 +65,7 @@ dependencies {
     implementation 'androidx.navigation:navigation-dynamic-features-fragment:2.3.5'
     implementation project(path: ':Core')
     implementation 'androidx.paging:paging-common-ktx:3.0.1'
+    implementation 'com.google.android.ads:mediation-test-suite:2.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
