--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,7 @@ buildscript {
         classpath "com.google.dagger:hilt-android-gradle-plugin:2.28-alpha"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.3.2"
 
-        classpath "io.realm:realm-gradle-plugin:10.4.0"
+        //classpath "io.realm:realm-gradle-plugin:10.4.0"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -24,15 +24,15 @@ buildscript {
 
 allprojects {
     repositories {
-        jcenter()
-        mavenCentral()
-        maven { url 'https://jitpack.io' }
+     /*   jcenter()*/
+        /*mavenCentral()*/
+     /*   maven { url 'https://jitpack.io' }
         maven {
             url 'https://maven.google.com/'
         }
         maven {
             url 'https://maven.fabric.io/public'
-        }
+        }*/
     }
 }
 
